timer and style cahanges

--- a/Javascript Trivia Game Code/index.html
+++ b/Javascript Trivia Game Code/index.html
@@ -62,7 +62,7 @@
 <body>
 
   <div class="container">
-    <h1 class="text-center text-primary mb-4">Trivia Game</h1>
+    <h1 class="text-center text-primary mb-4">JavaScript Trivia Game</h1>
     <p class="text-center text-secondary">Select the correct answer!</p>
 
     <div id="question-container" class="card p-4">
