--- a/Javascript Trivia Game Code/index.html
+++ b/Javascript Trivia Game Code/index.html
@@ -57,9 +57,16 @@
     .btn {
       margin: 5px;
     }
+
+    #timer {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #0056b3; 
+    }
   </style>
 </head>
 <body>
+  <div id="timer" class="text-center ">Time Elapsed: 0:00</div>
 
   <div class="container">
     <h1 class="text-center text-primary mb-4">JavaScript Trivia Game</h1>
