update for deployment

--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="Javascript Trivia Game Code/script.js"></script>
 </body>
 </html>
